--- a/src/style/application.scss
+++ b/src/style/application.scss
@@ -1,4 +1,6 @@
-.style {
-    background-color: #ffffff;
-    color: #000000;
-}
+///
+/// application.scss
+/// Andrea Tino - 2016 
+///
+
+@import "layout"
