--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -5,17 +5,26 @@
 
 .root {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    // Horizontal layout
+    height: 100%;
 
     .header {
         flex: 0 0 auto;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+
+        .content {
+            flex: 1 1 auto;
+        }
+
+        .footer {
+            flex: 0 0 auto;
+        }
     }
 
     .content {
         flex: 1 1 auto;
-    }
-
-    .footer {
-        flex: 0 0 auto;
     }
 }
