Adding server side

--- a/src/style/_fonts.scss
+++ b/src/style/_fonts.scss
@@ -10,10 +10,11 @@ $fontfamily-name-adamina:       adamina, serif;
 $fontfamily-name-ubuntu-mono:   ubuntu-mono, sans-serif;
 
 // Headings
-$font-title:            36pt $fontfamily-name-adamina;
-$font-heading1:         24pt $fontfamily-name-abel;
-$font-heading2:         18pt $fontfamily-name-abel;
+$font-title:            36pt $fontfamily-name-abel;
+$font-heading1:         24pt $fontfamily-name-adamina;
+$font-heading2:         18pt $fontfamily-name-adamina;
 
 // Text
+$font-text-title:       12pt $fontfamily-name-adamina;
 $font-text-plain:       12pt $fontfamily-name-ubuntu-mono;
 $font-text-emphasis:    12pt $fontfamily-name-ubuntu-mono;
