--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -3,6 +3,16 @@
 /// Andrea Tino - 2016 
 ///
 
+html {
+    height: 100%;
+    
+    body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
+}
+
 .root {
     display: flex;
     flex-direction: row;
@@ -14,6 +24,7 @@
         display: flex;
         flex-direction: column;
         height: 100%;
+        background-color: $color-brand-dark;
 
         .content {
             flex: 1 1 auto;
