--- a/src/style/_fonts.scss
+++ b/src/style/_fonts.scss
@@ -8,9 +8,11 @@ $fontfamily-name-abel:          abel, sans-serif;
 $fontfamily-name-advent-pro:    advent-pro, sans-serif;
 $fontfamily-name-adamina:       adamina, serif;
 $fontfamily-name-ubuntu-mono:   ubuntu-mono, sans-serif;
+$fontfamily-name-pontano-sans:   pontano-sans, sans-serif;
+$fontfamily-name-cookie:        cookie, cursive;
 
 // Headings
-$font-title:            36pt $fontfamily-name-abel;
+$font-title:            18pt $fontfamily-name-cookie;
 $font-heading1:         24pt $fontfamily-name-adamina;
 $font-heading2:         18pt $fontfamily-name-adamina;
 
