--- a/src/style/_title.scss
+++ b/src/style/_title.scss
@@ -3,14 +3,15 @@
 /// Andrea Tino - 2016 
 ///
 
-$title-margin-bottom: 10px;
-
 .root {
-    .header .content {
+    .header {
         .title {
             font: $font-title;
-            margin: $title-margin-bottom 0;
             color: $color-brand-white;
+
+            &:after {
+                content: "ReleaseTracker";
+            }
         }
     }
 }
