--- a/src/style/_colors.scss
+++ b/src/style/_colors.scss
@@ -7,3 +7,7 @@
 $color-brand-dark:      #262626;
 $color-brand-white:     #ffffff;
 $color-brand-grafite:   #313124;
+
+// Modified colors
+$color-header-dark:     $color-brand-grafite;
+$color-header-light:    #4a4a4a;
